# https://githubmemory.com/repo/tholo/pytest-flake8/issues/81

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.0"
tag_format = "v$version"

[tool.isort]
line_length = 120
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "mitmproxy_image"
include_trailing_comma = true

[tool.poetry]
name = "mitmproxy-image"
version = "1.2.0"
description = "Download image using mitmproxy on hydrus."
classifiers = ["Development Status :: 3 - Alpha", "Environment :: Console", "Environment :: Web Environment", "Intended Audience :: Developers", "Intended Audience :: End Users/Desktop", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.5", "Programming Language :: Python :: 3.6", "Topic :: Internet :: WWW/HTTP :: Indexing/Search", "Topic :: Utilities"]
homepage = "https://github.com/rachmadaniHaryono/mitmproxy-image"
authors = ["Rachmadani Haryono <foreturiga@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/rachmadaniHaryono/mitmproxy-image"
keywords = []
packages = [ { include = "mitmproxy_image", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
hydrus-api = ">=2.14.3"
ipdb = ">=0.13.3"
mitmproxy = ">=7.0.0"
more-itertools = ">=8.7.0"
pillow = ">=5.3.0"
python-json-logger = ">=2.0.1"
pyyaml = ">=5.3.1"
requests = ">=2.21.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
better-exceptions = "^0.3.3"
black = "^20.8b1"
darglint = "^1.5.8"
duty = "^0.6.0"
flake8 = "^3.7.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-docstrings = "^1.5.0"
flake8-pytest-style = "^1.3.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.2.1"
flake8-variables-names = "^0.0.4"
git-changelog = "^0.4.2"
httpx = "^0.16.1"
isort = "^5.7.0"
jinja2-cli = "^0.7.0"
mkdocs = "^1.1.2"
mkdocs-coverage = "^0.2.1"
mkdocs-macros-plugin = "^0.5.0"
mkdocs-material = "^6.2.7"
mkdocstrings = "^0.15.0"
mypy = "^0.812"
pep8-naming = "^0.11.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-golden = "^0.2.1"
pytest-randomly = "^3.5.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.0"
toml = "^0.10.2"
types-PyYAML = "^6.0.1"
types-toml = "^0.10.1"
wps-light = "^0.15.2"
pdbpp = "^0.10.3"
ssort = "^0.10.0"

[tool.poetry.scripts]
mitmproxy-image = "mitmproxy_image.cli:main"

[tool.pyright]
pythonPlatform = "all"

[tool.pytest.ini_options]
norecursedirs = [

  ".git",
  ".tox",
  ".env",
  "dist",
  "build",
]
python_files = [
  "test_*.py",
  "*_test.py",
  "tests.py",
]
addopts = [
  "--cov",
  "--cov-config config/coverage.ini",
]
testpaths = [
  "tests",
]
filterwarnings = [
    "ignore:Importing 'itsdangerous.json' is deprecated and will be removed in ItsDangerous 2.1. Use Python's 'json' module instead:DeprecationWarning",
    "ignore:The patterns .* didn't match anything:pytest_golden.plugin.GoldenTestUsageWarning",
]
