# https://githubmemory.com/repo/tholo/pytest-flake8/issues/81

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "tests/fixtures"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.5.1"
tag_format = "v$version"
version_files = [
  'pyproject.toml',
  'src/mitmproxy_image/cli.py'
]

[tool.isort]
profile = 'black'

[tool.poetry]
name = "mitmproxy-image"
version = "1.5.1"
description = "Download image using mitmproxy on hydrus."
classifiers = ["Development Status :: 3 - Alpha", "Environment :: Console", "Environment :: Web Environment", "Intended Audience :: Developers", "Intended Audience :: End Users/Desktop", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.5", "Programming Language :: Python :: 3.6", "Topic :: Internet :: WWW/HTTP :: Indexing/Search", "Topic :: Utilities"]
homepage = "https://github.com/rachmadaniHaryono/mitmproxy-image"
authors = ["Rachmadani Haryono <foreturiga@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/rachmadaniHaryono/mitmproxy-image"
keywords = []
packages = [ { include = "mitmproxy_image", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.3"
httpx = "^0.23.0"
hydrus-api = ">=4.0.0"
ipdb = ">=0.13.9"
mitmproxy = "^9.0.0"
more-itertools = ">=9.0.0"
pillow = ">=9.2.0"
pyyaml = ">=6.0"
requests = ">=2.28.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
better-exceptions = "^0.3.3"
black = "^22.10.0"
darglint = "^1.8.1"
duty = "^0.7.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.0"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-pytest-style = "^1.6.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.8.0"
flake8-variables-names = "^0.0.5"
git-changelog = "^0.6.0"
isort = "^5.10.1"
jinja2-cli = "^0.8.2"
mkdocs = "^1.4.1"
mkdocs-coverage = "^0.2.5"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-material = "^8.5.7"
mkdocstrings = "^0.19.0"
mypy = "^0.982"
pdbpp = "^0.10.3"
pep8-naming = "^0.13.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-golden = {git = "https://github.com/oprypin/pytest-golden.git"}
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
pytest-xdist = "^3.0.2"
ssort = "^0.11.6"
toml = "^0.10.2"
types-PyYAML = "^6.0.12.1"
types-toml = "^0.10.8"
MarkupSafe = "2.1.1"
poetryup = "^0.12.3"

[tool.poetry.scripts]
mitmproxy-image = "mitmproxy_image.cli:main"

[tool.pyright]
pythonPlatform = "all"

[tool.pytest.ini_options]
norecursedirs = [

  ".git",
  ".tox",
  ".env",
  "dist",
  "build",
]
python_files = [
  "test_*.py",
  "*_test.py",
  "tests.py",
]
addopts = [
  "--cov",
  "--cov-config config/coverage.ini",
]
testpaths = [
  "tests",
]
filterwarnings = [
    "ignore:Importing 'itsdangerous.json' is deprecated and will be removed in ItsDangerous 2.1. Use Python's 'json' module instead:DeprecationWarning",
    "ignore:The patterns .* didn't match anything:pytest_golden.plugin.GoldenTestUsageWarning",
]
